infra-k8s/base/keycloak/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`auth.localhost`)
      kind: Rule
      services:
        - name: keycloak
          port: 80
